fix jumping logout/login button

--- a/res/less/components/dock.less
+++ b/res/less/components/dock.less
@@ -125,12 +125,13 @@
     padding-left: 0;
     margin-left: 2rem;
     overflow: visible;
+    display: flex;
+    align-items: center;
 
     i {
         color: @brand-primary;
-        transform-origin: 50% 50%;
-        transform: scale(2.25);
-        margin-right: 1em;
+        font-size: 1.75rem;
+        margin-right: .75rem;
     }
 }
 
